# django-chatbot

./: Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yml  env.example  pyproject.toml
chatbot/: models.py  serializers.py  tasks.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py
core/: settings.py  urls.py
realmate_challenge/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
